# Presentation-Clicker

./: .gitignore  LICENSE.md  README.md  ToDo.md  mock_client.py  mqtt_server.py  pyproject.toml  requirements.txt  setup.py  ui_client.py  ui_server.py
build_scripts/: build_client.ps1  build_client_cli.py  build_server.ps1  build_server_cli.py
docker/: docker-compose.yaml  docker-compose.yml  mosquitto.conf
presentation_clicker/: __init__.py  cli.py
presentation_clicker/client/: __init__.py  mqtt_client.py  mqtt_config-template.yaml  setup.py  ui_client.py
presentation_clicker/common/: encryption.py  logging_common.py  mqtt_base.py  mqtt_config.py  topics.py  ui_base.py  ui_common.py
presentation_clicker/server/: __init__.py  mqtt_server.py  setup.py  ui_server.py
presentation_clicker_client/: __init__.py  mqtt_client.py  setup.py  ui_client.py  ui_client_old.py
presentation_clicker_client/presentation_clicker_client/: mqtt_client.py  mqtt_client_old.py  mqtt_config.json  ui_client.py
presentation_clicker_common/: __init__.py  cli_common.py  logging_common.py  setup.py
presentation_clicker_listener/: __init__.py  mqtt_config-template.yaml  mqtt_server.py  mqtt_server_old.py  setup.py  ui_server.py  ui_server_old.py
presentation_clicker_listener/presentation_clicker_listener/: mqtt_config.json  mqtt_server.py  ui_server.py
